--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>world-weave-narratives</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>NOS.nl - Nieuws, Sport en Evenementen | Nederlandse Omroep Stichting</title>
+    <meta name="description" content="NOS.nl - Nieuws, Sport en Evenementen op Radio, TV en Internet" />
+    <meta name="author" content="Fontys Hogescholen" />
 
-    <meta property="og:title" content="world-weave-narratives" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="NOS.nl - Nieuws, Sport en Evenementen | Nederlandse Omroep Stichting" />
+    <meta property="og:description" content="NOS.nl - Nieuws, Sport en Evenementen op Radio, TV en Internet" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://static.nos.nl/img/nos/nos-social.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@NOS" />
+    <meta name="twitter:image" content="https://static.nos.nl/img/nos/nos-social.jpg" />
   </head>
 
   <body>
